<resources>
    <string name="app_name">模拟定位</string>
    <string name="app_nick">之打卡助手</string>
    <string name="user_heart">漫游神州</string>
    <string name="worth_wait">我帮你忙</string>
    <string name="drawer_favorite">我的收藏</string>
    <string name="drawer_reward">打&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;赏</string>
    <string name="drawer_feedback">意见反馈</string>
    <string name="drawer_update">检查更新</string>
    <string name="drawer_about">关&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;于</string>

    <string name="welcome_enter">立&#160;即&#160;体&#160;验</string>
    <string name="press_back_again">再按一次返回键退出</string>

    <string name="tab_title_first">穿越</string>
    <string name="tab_title_second">神游</string>
    <string name="tab_title_third">我的</string>

    <string name="detail_material">食材:</string>
    <string name="detail_steps">步骤:</string>

    <string name="add_favorite">收藏成功</string>
    <string name="remove_favorite">取消收藏</string>

    <string name="menu_search">搜索</string>
    <string name="search_place">输入地名</string>
    <string name="search_city">输入城市名</string>

    <string name="cancel">取消</string>
    <string name="no_result">没有找到相关的地名哦</string>

    <string name="about">关于</string>

    <string name="reward">赏</string>
    <string name="reward_tip">打赏一下作者</string>
    <string name="thanks">关于</string>
    <string name="thanks_content">模拟定位是一款用来辅助定位或帮助异地打卡(如钉钉打卡)的App。注意：新版的微信不再依赖手机自带的定位模块，所以本app不适合新版的微信</string>
    <string name="scan">扫一扫下面的二维码加入QQ群</string>
    <string name="search_gongzhonghao">或搜索QQ群:<font color="#0000FF">649974080</font>(点击复制QQ群号)</string>
    <string name="qq_qun">649974080</string>
    <string name="only_one_phone"><u>只有一个手机，无法扫描，怎么办？点击我试试</u></string>
    <string name="save_qrcode">保存二维码到相册</string>
    <string name="after_save_qrcode">点击上面的按钮，将二维码保存到手机相册，然后打开微信扫一扫，如下图</string>
    <string name="click_right_top">点击右上角按钮，弹出下图所示，从底部选择“从相册选择二维码”，弹出相册目录，默认第一张二维码就是之前保存的二维码。</string>
    <string name="scan_for_reward">微信扫一扫下面的二维码进行打赏</string>

    <string name="setting_tip_wrong">检测到您的手机设置不正确，暂时无法开启模拟定位，请按下列提示设置后，再开启模拟定位！</string>
    <string name="setting_tip_right">检测到您的手机设置都正确，已经可以去开启模拟定位了！</string>
    <string name="setting_alert">知道了</string>
    <string name="close_postion_service">②关闭"位置服务"</string>
    <string name="open_mock_app_low">①开启“允许模拟位置”</string>
    <string name="open_mock_app_high">①请在“选择模拟位置信息应用”时选中本软件</string>
    <string name="fast_setting">×(此处设置不正确，点击我进行设置)</string>
    <string name="setting_right">√(此处设置正确)</string>
    <string name="dialog_title">温馨提示</string>

    <string name="sy_desc_title">神游功能介绍：</string>
    <string name="sy_desc">神游功能是指将收藏夹内多个位置按指定的时间间隔切换定位，例如收藏里有A、B和C三个位置，设定的间隔是10分钟，第一次定位在A位置，10分钟后，定位切换到B位置，再过10分钟，定位切换到C位置，如果设置循环，10分钟后继续从A位置开始。</string>
    <string name="sy_step_title">开启神游步骤：</string>
    <string name="sy_step">1.先将需要定位的位置在“穿越”页面按顺序添加到收藏夹中，注意收藏时一定要按先后顺序，把不需要用到的位置需从收藏夹中移除；\n
    2.收藏完所有位置后，在下面的设置中设置是否开启循环定位，以及每个位置切换时间间隔。</string>
    <string name="repeat">1.是否开启循环定位</string>
    <string name="interval">2.位置切换间隔</string>
    <string name="minute">分钟</string>
    <string name="begin_location">开始神游</string>
    <string name="stop_location">停止神游</string>
    <string name="setting">设置:</string>
    <string name="click_ad_tip">亲，帮点击一次广告，支持下作者吧，每点击一次就能多穿越一次哦</string>
    <string name="refuse">无情的拒绝</string>
    <string name="ok_to_click">点击广告</string>
</resources>
