<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/color_primary"
        android:text="@string/dialog_title"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/detail_title"
        android:text="@string/click_ad_tip"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/main_title_normal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:id="@+id/layout_setting2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btn_left"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/color_primary"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/ok_to_click"/>
        <TextView
            android:id="@+id/btn_right"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/color_primary"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/refuse"/>
    </LinearLayout>

</LinearLayout>
