<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:fitsSystemWindows="true"
    android:background="@color/fragment_background">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:visibility="visible"/>
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:maxHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary">
        <LinearLayout
            android:id="@+id/expanded_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/city"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/edit_text_color"
                android:hint="@string/search_city"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/shape_round_corner_white"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
            <EditText
                android:id="@+id/keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/edit_text_color"
                android:hint="@string/search_place"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/shape_round_corner_white"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/no_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/my_toolbar"
        android:layout_marginTop="50dp"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_result"
            android:textColor="@color/main_title_normal"
            android:gravity="center_horizontal"/>
        <com.tonyhu.location.widget.Pendulum
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>
